--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/lebreRafael/inp-lab-test/issues"
   },
-  "homepage": "https://github.com/lebreRafael/inp-lab-test#readme"
+  "homepage": "https://github.com/lebreRafael/inp-lab-test#readme",
+  "dependencies": {
+    "@puppeteer/replay": "^2.13.4",
+    "puppeteer": "^21.10.0"
+  }
 }
